--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
         <title>Sign-Up Form</title>
     </head>
     <body>
+        <div id="container">
+            <div class="logo"></div>
+            <div class="form">
+                <div class="intro"></div>
+                <div class="sign-up"></div>
+                <div class="create">
+                    <button type="submit">Create Account</button>
+                    <p class="log-in">Already have an account?
+                        <a href="#">Log in</a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
