--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     </head>
     <body>
         <div id="container">
-            <div class="logo"></div>
+            <div class="logo">
+                <p>Photo by <a href="https://unsplash.com/@haliewestphoto">
+                    Halie West</a> on
+                    <a href="https://unsplash.com/photos/25xggax4bSA">
+                        Unsplash</a>
+                </p>
+            </div>
             <div class="form">
                 <div class="intro"></div>
                 <div class="sign-up"></div>
