Add logo image and ODIN paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <body>
         <div id="container">
             <div class="logo">
+                <div class="logo-image">
+                    <img src="images/odin-lined.png">
+                    <p>ODIN</p>
+                </div>
                 <p>Photo by <a href="https://unsplash.com/@haliewestphoto">
                     Halie West</a> on
                     <a href="https://unsplash.com/photos/25xggax4bSA">
