--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
                 </p>
             </div>
             <div class="form">
-                <div class="intro"></div>
+                <div class="intro">
+                    <p>This is not a real online service! You know you need
+                        something like this in your life to help you realize
+                        your deepest dreams.<br>
+                        Sign up <em>now</em> to get started.<br>
+                        <br>
+                        You <em>know</em> you want to.
+                    </p>
+                </div>
                 <div class="sign-up"></div>
                 <div class="create">
                     <button type="submit">Create Account</button>
