Add form inputs container, and individual containers

--- a/index.html
+++ b/index.html
@@ -40,33 +40,41 @@
                     <form action="#" method="post">
                         <legend>Let's do this!</legend>
 
-                        <label for="first-name">FIRST NAME
-                            <input type="text" id="first-name"
-                                name="first-name">
-                        </label>
+                        <div class="form-inputs">
+                            <div>
+                                <label for="first-name">FIRST NAME</label>
+                                    <input type="text" id="first-name"
+                                        name="first-name">
+                            </div>
 
-                        <label for="last-name">LAST NAME
-                            <input type="text" id="last-name"
-                                name="last-name">
-                        </label>
+                            <div>
+                                <label for="last-name">LAST NAME</label>
+                                    <input type="text" id="last-name"
+                                        name="last-name">
+                            </div>
 
-                        <label for="email">EMAIL
-                            <input type="email" id="email" name="email">
-                        </label>
+                            <div>
+                                <label for="email">EMAIL</label>
+                                    <input type="email" id="email" name="email">
+                            </div>
 
-                        <label for="phone">PHONE NUMBER
-                            <input type="tel" id="phone" name="phone">
-                        </label>
+                            <div>
+                                <label for="phone">PHONE NUMBER</label>
+                                    <input type="tel" id="phone" name="phone">
+                            </div>
 
-                        <label for="password">PASSWORD
-                            <input type="password" id="password"
-                                name="password">
-                        </label>
+                            <div>
+                                <label for="password">PASSWORD</label>
+                                    <input type="password" id="password"
+                                        name="password">
+                            </div>
 
-                        <label for="conf-password">CONFIRM PASSWORD
-                            <input type="password" id="conf-password"
-                                name="conf-password">
-                        </label>
+                            <div>
+                                <label for="conf-password">CONFIRM PASSWORD</label>
+                                    <input type="password" id="conf-password"
+                                        name="conf-password">
+                            </div>
+                        </div>
                     </form>
                 </div>
 
