Add required on first name, email, and passwords

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div>
                                 <label for="first-name">FIRST NAME</label>
                                     <input type="text" id="first-name"
-                                        name="first-name">
+                                        name="first-name" required>
                             </div>
 
                             <div>
@@ -55,7 +55,8 @@
 
                             <div>
                                 <label for="email">EMAIL</label>
-                                    <input type="email" id="email" name="email">
+                                    <input type="email" id="email"
+                                        name="email" required>
                             </div>
 
                             <div>
@@ -66,13 +67,13 @@
                             <div>
                                 <label for="password">PASSWORD</label>
                                     <input type="password" id="password"
-                                        name="password">
+                                        name="password" required>
                             </div>
 
                             <div>
                                 <label for="conf-password">CONFIRM PASSWORD</label>
                                     <input type="password" id="conf-password"
-                                        name="conf-password">
+                                        name="conf-password" required>
                             </div>
                         </div>
                     </form>
